adição de link para o repositório do projeto

--- a/scripts/templates/base.html
+++ b/scripts/templates/base.html
@@ -14,10 +14,10 @@
 
 <body>
   <header class="header">
-    <a href="/"><h1>Recomendador de Vídeos sobre ciência de dados</h1></a>
+    <a href="/"><h1>Recomendador de vídeos sobre ciência de dados</h1></a>
       <nav>
         <ul class=“menu”>
-          <li><a href="/">Home</a></li>
+          <li><a href="https://github.com/fhfraga/classificador_video_youtube">Repositório do projeto</a></li>
           <li><a href="/predict">Predição novos vídeos</a></li>
           <li><a href=https://fhfraga.github.io>Portfólio</a></li>
         </ul>
