adição de logos para as redes do autor

--- a/scripts/templates/base.html
+++ b/scripts/templates/base.html
@@ -14,12 +14,17 @@
 
 <body>
   <header class="header">
-    <a href="/"><h1>Recomendador de vídeos sobre ciência de dados</h1></a>
+    <a href="/"><h3>Recomendador de vídeos sobre ciência de dados</h3></a>
       <nav>
         <ul class=“menu”>
+          <li><a href="/predict">Predição novo vídeo</a></li>
           <li><a href="https://github.com/fhfraga/classificador_video_youtube">Repositório do projeto</a></li>
-          <li><a href="/predict">Predição novos vídeos</a></li>
-          <li><a href=https://fhfraga.github.io>Portfólio</a></li>
+          <li><a href="https://github.com/fhfraga/"">
+            <img src="../static/images/github.svg" alt="Github" width="30px"></a></li>
+          <li><a href="https://fhfraga.github.io">
+            <img src="../static/images/portfolio.svg" alt="Portfólio"></a></li>
+          <li><a href="https://www.linkedin.com/in/fhfraga/">
+            <img src="../static/images/linkedin.png" alt="Linkedin" width="30px"></a></li>
         </ul>
       </nav>
     </header>
